# NLP-Tutorial

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ai_assistant.py  data.dvc  order_report.html  popular_products_report.html  pyproject.toml  requirements.txt  setup.py  top_expensive_products_report.html  user_report.html
.dvc/: config
data/: .gitignore  AirlineTweets.csv.dvc  Notion_DB.dvc  all_book_titles.txt.dvc  bbc_text_cls.csv.dvc  chroma.dvc  cs229-data.dvc  doc_db.dvc  res.json  robert_frost.txt.dvc  sample.json  sample_1.json.dvc  sample_2.json.dvc  sample_text.txt.dvc  spam.csv.dvc  test_data.csv.dvc  tmdb_5000_movies.csv.dvc
notebook/: 00_scrape_texts.ipynb
notebook/01_vector_models/: 01_intro_NLP.ipynb  01_tf_idf.ipynb  01amovie_recommender_tfidf.ipynb  02_.ipynb  02_tfidf_n_word_emb.ipynb
notebook/01a_text_processing/: 01-lab.ipynb  01_txt_classifier_trad_method.ipynb  02-more-txt-processing.ipynb  03-topic-modelling (b).ipynb  03-topic-modelling.ipynb  03b-Gensim.ipynb  03c-train_n_quantize_fasttext.ipynb  04-rec-system-2.ipynb  04-rec-system.ipynb  05-RNNs.ipynb  Makefile  docker-compose.yaml  ner_data.jsonl  output.jsonl  playground.ipynb  sample.txt  similar_titles.csv  similar_titles.py  similar_titles_new.csv  utils.py
notebook/01a_text_processing/utils/: cluster_utils.py  custom_datasets.py  custom_pipeline.py  custom_tokenizers.py  ml.py  ml_architectures.py  ml_simple.py  ner_utils.py  neural_net_utils.py  topic_modelling.py  utils.py
notebook/01a_text_processing/utils/lightning_utils/: datamodule.py
notebook/02_probalistic_models/: .gitignore  01_text_classification.ipynb  02_lab.ipynb  edgar_allan_poe.txt.dvc
notebook/03_tensorflow/: 01_intro_to_TF.ipynb  02_regression_with_tf.ipynb  03_classification_with_tf.ipynb
notebook/04_ML_models/: .gitignore  01_spam_detection.ipynb  02_sentiment_analysis.ipynb  AirlineTweets.csv.dvc
notebook/05_LLM/: 01_Intro copy.ipynb  01_Intro.ipynb  01_introduction.ipynb  01_models_prompts_parsers.ipynb  02_.ipynb  02_Q_n_A.ipynb  03_Agents.ipynb  04_document_processing.ipynb  05_vector_stores.ipynb  06_LAB.ipynb
notebook/05_LangChain/: 01_Intro.ipynb  02_Q_n_A.ipynb  03_Agents.ipynb  06_LAB.ipynb
notebook/06_Transformers/: 01_intro.ipynb  02_fineTuning.ipynb  02a_finetuning_pytorch.ipynb  03.sharing_models.ipynb  03_sharing_models.ipynb  04_manipulating_datasets.ipynb  05_semantic_search.ipynb  06a_tokenizers.ipynb  06c_building_tokenizers.ipynb  07_token_classif.ipynb  07b_data_prep.ipynb  07c_seq_classif_wf_polars.ipynb  07c_sequence_classification.ipynb  08_long_sequence_classif.ipynb  6b_types_of_tokenizers.ipynb  README.md
notebook/06_Transformers/NLP-With-Transformers/: 01-text-classification.ipynb  02-NER.ipynb  02a-NER-football.ipynb
notebook/06_Transformers/tasks/: 02_masked_language_modelling.ipynb  sentiments_analysis.ipynb
notebook/06_Transformers/tokenizers/: tokenizer.json
notebook/07-Qdrant/: 01-intro.ipynb  neural_searcher.py
notebook/08-Makemore/: 01-n-gram.ipynb  02-mlp.ipynb  03-activations-n-gradients.ipynb  03-wavenet.ipynb  04-wavenet-2.ipynb
notebook/08-Makemore/01-bigram/: 01-n-gram.ipynb  02-mlp.ipynb  03-activations-n-gradients.ipynb  03-wavenet.ipynb  lab.ipynb  n-gram.ipynb
notebook/09-LLMs/: 00-lab.ipynb  006-spend-classifier.ipynb  006a-spend-classifier.ipynb  01-intro.ipynb  02-Data-prep.ipynb  03-attention-mechanism.ipynb  04-implementing-GPT-model.ipynb  06-classif-finetuning.ipynb  README.md  gpt_download.py  gpt_generate.py  train_eval.py  utils.py
notebook/09-LLMs/utilities/: dataset_n_dataloader.py  hf_utils.py  training_n_eval_hf.py
notebook/ML_AI/: 01-perceptron.ipynb  02-supervisel-ml-algos.ipynb  03-linear-models.ipynb
notebook/Projects/Data-mining/: 01-token-classif.ipynb  02-sentiments-analysis-qdrant.ipynb  02-sentiments-analysis.ipynb
notebook/Projects/Data-mining/Clustering/: 00-Umap.ipynb  01-topic-modelling.ipynb  02-BERTopic-modelling.ipynb  02-topic-modelling.ipynb  umap-topics-3d-color.html
notebook/Projects/Data-mining/Sentiment-analysis/: 01-sentiments-analysis-pinecone.ipynb  (+3 more)
notebook/Projects/Pycode-generation/: 01-basic.ipynb  README.md  chat_history.json
notebook/Projects/Retriever/: README.md
notebook/Projects/Retriever/pdf-chatbot/: LangChain-README.md  Pipfile  README.md  dump.rdb  pyproject.toml  requirements.txt  tasks.py  test.py
notebook/Projects/Retriever/pdf-chatbot/app/celery/: __init__.py
notebook/Projects/Retriever/pdf-chatbot/app/chat/: __init__.py  chat.py  create_embeddings.py  score.py
notebook/Projects/Retriever/pdf-chatbot/app/chat/callbacks/: stream.py
notebook/Projects/Retriever/pdf-chatbot/app/chat/chains/: retrieval.py  streamable.py
notebook/Projects/Retriever/pdf-chatbot/app/chat/embeddings/: openai.py
notebook/Projects/Retriever/pdf-chatbot/app/chat/llms/: chat_openai.py
notebook/Projects/Retriever/pdf-chatbot/app/chat/memories/: sql_memory.py
notebook/Projects/Retriever/pdf-chatbot/app/chat/models/: __init__.py
notebook/Projects/Retriever/pdf-chatbot/app/chat/vector_stores/: pinecone.py  qdrant.py
notebook/Projects/Retriever/pdf-chatbot/app/web/: __init__.py  api.py  files.py  hooks.py
notebook/Projects/Retriever/pdf-chatbot/app/web/config/: __init__.py
notebook/Projects/Retriever/pdf-chatbot/app/web/db/: __init__.py
notebook/Projects/Retriever/pdf-chatbot/app/web/db/models/: __init__.py  base.py  conversation.py  message.py  pdf.py  user.py
notebook/Projects/Retriever/pdf-chatbot/app/web/tasks/: embeddings.py
notebook/Projects/Retriever/pdf-chatbot/app/web/views/: auth_views.py  client_views.py  conversation_views.py  pdf_views.py  score_views.py
notebook/Projects/Retriever/pdf-chatbot/client/src/: app.css
notebook/polars_df/: 01_intro.ipynb  02_data_prep.ipynb
src/: metrics.py  text_classifier.py  text_summarizer.py
(+27 files in other folders)
