[tool.poetry]
name = "pdf-chatbot"
version = "0.1.0"
description = "This is used for chatting with your PDFs"
authors = ["Chinedu Ezeofor <neidu@email.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "1.26.122"
botocore = "1.29.122"
celery = "5.3.1"
click = "8.1.3"
flask = "2.3.1"
flask-sqlalchemy = "3.0.3"
flask-cors = "4.0.0"
langchain = "0.0.349"
python-dotenv = "^1.0.0"
redis = "5.0.0"
pydantic = "1.10.13"
werkzeug = "2.3.1"
invoke = "2.2.0"
pypdf = "3.15.4"
watchdog = "3.0.0"
langfuse = "1.0.18"
backoff = "2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
