[tool.poetry]
name = "pdf-chatbot"
version = "0.1.0"
description = ""
authors = ["Chinedu Ezeofor <neidu@email.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
boto3 = "1.26.122"
botocore = "1.29.122"
celery = "5.3.1"
click = "8.1.3"
flask = "2.3.1"
flask-sqlalchemy = "3.0.3"
flask-cors = "4.0.0"
langchain = "0.0.352"
openai = "0.27.8"
python-dotenv = "1.0.0"
werkzeug = "2.3.1"
invoke = "2.2.0"
qdrant-client = "1.7.0"
pypdf = "3.15.4"
watchdog = "3.0.0"
tiktoken = "0.4.0"
uuid = "1.30"
langfuse = "1.0.18"
backoff = "2.2.1"
redis = "5.0.0"
typeguard = "^4.1.5"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
